Corresponding to compress & uglify

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="GeckoHomeServer"/>
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-    <script src="bundle.js"></script>
+    <script src="js/bundle.js"></script>
   </head>
   <body spellcheck="false">
     <div class="container-fluid">
