Node-REDのNode一覧のグループ名を修正

--- a/redNodes/12-gecko-elapsedtime.html
+++ b/redNodes/12-gecko-elapsedtime.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko elapsed time', {
         paletteLabel:'elapsed time',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ffcc33',
         defaults: {
             name: {value:''},
