--- a/redNodes/20-gecko-command.html
+++ b/redNodes/20-gecko-command.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko command', {
         paletteLabel:'command',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ff9900',
         defaults: {
             name: {value:''},
