--- a/redNodes/21-gecko-remocon-out.html
+++ b/redNodes/21-gecko-remocon-out.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko remocon out', {
         paletteLabel:'remocon out',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ff9900',
         defaults: {
             name: {value:''},
