--- a/redNodes/30-gecko-swtch.html
+++ b/redNodes/30-gecko-swtch.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko switch', {
         paletteLabel:'switch',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ffcc99',
         defaults: {
             name: {value:''},
