--- a/redNodes/40-gecko-mail.html
+++ b/redNodes/40-gecko-mail.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko mail', {
         paletteLabel:'mail',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ccff66',
         defaults: {
             name: {value:''},
