--- a/redNodes/10-gecko-status.html
+++ b/redNodes/10-gecko-status.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko status', {
         paletteLabel:'status',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ffcc33',
         defaults: {
             name: {value:''},
