--- a/redNodes/11-gecko-remocon-in.html
+++ b/redNodes/11-gecko-remocon-in.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko remocon in', {
         paletteLabel:'remocon in',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ffcc33',
         defaults: {
             name: {value:''},
