--- a/redNodes/13-gecko-event.html
+++ b/redNodes/13-gecko-event.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko event', {
         paletteLabel:'event',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ffcc33',
         defaults: {
             name: {value:''},
