--- a/redNodes/22-gecko-exec.html
+++ b/redNodes/22-gecko-exec.html
@@ -2,7 +2,7 @@
     
     RED.nodes.registerType('gecko exec', {
         paletteLabel:'exec',
-        category: 'gecko_link',
+        category: 'GeckoLink',
         color: '#ff9900',
         defaults: {
             name: {value:''},
