vue.js Single File Componentsに変更

--- a/source/index.html
+++ b/source/index.html
@@ -9,26 +9,12 @@
     <meta name="apple-mobile-web-app-title" content="GeckoHomeServer"/>
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <link rel="icon" href="./images/GeckoIcon.ico">
     <script src="js/bundle.js"></script>
   </head>
   <body spellcheck="false">
-    <div class="container-fluid">
-      <div id="tab-bar"></div>
-      <div id="toast-container"></div>
-      <div class="tab-content" id="tab_systemSetup"></div>
-      <div class="tab-content" id="tab_pairing"></div>
-      <div class="tab-content" id="tab_basicSetup"></div>
-      <div class="tab-content" id="tab_advancedSetup"></div>
-      <div class="tab-content" id="tab_moduleList"></div>
-      <div class="tab-content" id="tab_linkDevices"></div>
-      <div class="tab-content" id="tab_remocon"></div>
-      <div class="tab-content" id="tab_remoconMacro"></div>
-      <div class="tab-content" id="tab_remoconAircon"></div>
-      <div class="tab-content" id="tab_remoconTV"></div>
-      <div class="tab-content" id="tab_uiSetting"></div>
-      <div class="tab-content" id="tab_nodeRed"></div>
-      <div class="tab-content" id="tab_debugPanel"></div>
-    </div>
+    <div id="app"></div>
+    <div id="toast-container"></div>
   </body>
 </html>
 
