Hue CT/Hueコマンド設定値追加 status.state追加 Airconの情報をサーバーに上げるように追加 remocon画面のボタンでリモコンを出すとrepeatが32回になっていた問題の修正 Node-Red Switch-nodeでエラー発生していた問題の修正

--- a/redNodes/30-gecko-swtch.html
+++ b/redNodes/30-gecko-swtch.html
@@ -170,6 +170,7 @@
             }
           } else {
             for(let i = 0; i < 4; i++) {
+              if(!this.rules[i]) this.rules[i] = {};
               this.rules[i].enable = false;
             }
             this.outputs = 0;
