--- a/redNodes/11-gecko-remocon-in.html
+++ b/redNodes/11-gecko-remocon-in.html
@@ -19,37 +19,42 @@
           return this.labelName;
         },
         oneditprepare: function() {
+          this.editValue = {
+            deviceName: this.deviceName,
+            remoconGroup: this.remoconGroup,
+            remoconCode: this.remoconCode,
+          };
+
           $.getJSON('gecko/' + this.id, (homeServer) => {
-          
             this.homeServer = homeServer;
-            if(this.deviceName == null) this.deviceName = 'all';
+            if(this.editValue.deviceName == null) this.editValue.deviceName = 'all';
             $('#node-input-deviceName').append($('<option></option>').val('all').text('all'));
             $('#node-input-deviceName').append($('<option></option>').val('server').text('server'));
             for(i in this.homeServer.alias) {
               if(!(parseInt(this.homeServer.alias[i].option, 16) & (1 << 22))) continue;
               $('#node-input-deviceName').append($('<option></option>').val(this.homeServer.alias[i].name).text(this.homeServer.alias[i].name));
             }
-            $('#node-input-deviceName').val(this.deviceName);
+            $('#node-input-deviceName').val(this.editValue.deviceName);
             
-            if(this.remoconGroup == null) this.remoconGroup = 'all';
+            if(this.editValue.remoconGroup == null) this.editValue.remoconGroup = 'all';
             $('#node-input-remoconGroup').append($('<option></option>').val('all').text('all'));
             for(i in this.homeServer.remocon.remoconGroup) {
               $('#node-input-remoconGroup').append($('<option></option>').val(i).text(this.homeServer.remocon.remoconGroup[i].comment));
             }
-            $('#node-input-remoconGroup').val(this.remoconGroup);
+            $('#node-input-remoconGroup').val(this.editValue.remoconGroup);
 
             const RedrawRemoconCode = (group) => {
-              if(this.remoconCode == null) this.remoconCode = 'all';
+              if(this.editValue.remoconCode == null) this.editValue.remoconCode = 'all';
               $('#node-input-remoconCode option').remove();
               $('#node-input-remoconCode').append($('<option></option>').val('all').text('all'));
               for(i in this.homeServer.remocon.remoconTable) {
                 if((group != 'all') && (group != this.homeServer.remocon.remoconTable[i].group)) continue;
                 $('#node-input-remoconCode').append($('<option></option>').val(i).text(this.homeServer.remocon.remoconTable[i].comment));
               }
-              $('#node-input-remoconCode').val(this.remoconCode);
+              $('#node-input-remoconCode').val(this.editValue.remoconCode);
             }
-            $('#node-input-remoconGroup').change((e) => {this.remoconCode = null;RedrawRemoconCode(e.target.value);});
-            RedrawRemoconCode(this.remoconGroup);
+            $('#node-input-remoconGroup').change((e) => {this.editValue.remoconCode = null;RedrawRemoconCode(e.target.value);});
+            RedrawRemoconCode(this.editValue.remoconGroup);
           });
         },
         oneditsave: function() {
