--- a/redNodes/21-gecko-remocon-out.html
+++ b/redNodes/21-gecko-remocon-out.html
@@ -95,6 +95,6 @@
 </script>
 
 <script type="text/x-red" data-help-name="gecko remocon out">
-    <p>入力があった時にremocon group, remocon codeで指定されたリモコンコードをmoduleから発光します。</p>
+    <p>入力があった時にremocon group, remocon codeで指定されたリモコンコードをmoduleから出力します。</p>
 </script>
 
